--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,7 @@ body {
   height: 1000px;
 }
 
-body, ul, li, h1, h2, h3 {
+body, ul, li, h1, h2, h3, p {
   margin: 0;
   padding: 0;
 }
@@ -13,7 +13,6 @@ ul {
 }
 
 a {
-  display: block;
   text-decoration: none;
 }
 
