--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import 'header.css';
 @import 'global.css';
 @import 'home.css';
+@import 'clients-test.css';
 
 /* Componentes */
 @import '/css/componentes/cores.css';
