--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import 'home.css';
 @import 'clients-test.css';
 @import 'pictures.css';
+@import 'footer.css';
 
 /* Componentes */
 @import '/css/componentes/cores.css';
