--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,15 @@
 .header-bg {
-  background: url('../images/desktop/image-header.jpg')no-repeat center;
+  background: url("../images/desktop/image-header.jpg") no-repeat center;
   background-size: cover;
   height: 100vh;
 }
 
-.header, .header-menu {
+.menu-btn {
+  display: none;
+}
+
+.header,
+.header-menu {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -20,13 +25,13 @@
   gap: 1.6rem;
 }
 
-.header-menu a{
+.header-menu a {
   font: 600 1rem/1 "Barlow", sans-serif;
   color: var(--white);
 }
 
-.header-menu li:nth-child(-n+3) a:hover {
-color: hsl(0, 0%, 100%, .6);
+.header-menu li:nth-child(-n + 3) a:hover {
+  color: hsl(0, 0%, 100%, 0.6);
 }
 
 .header-menu li:last-child a {
@@ -40,8 +45,8 @@ color: hsl(0, 0%, 100%, .6);
 
 .header-menu li:last-child a:hover {
   color: var(--white);
-  background: hsl(0, 0%, 100%, .2);
-  transition: .2s;
+  background: hsl(0, 0%, 100%, 0.2);
+  transition: 0.2s;
 }
 
 /* INTRO */
@@ -62,4 +67,99 @@ color: hsl(0, 0%, 100%, .6);
   margin-bottom: 80px;
   letter-spacing: 10px;
   text-align: center;
+}
+
+@media (max-width: 375px) {
+  .header-bg {
+    background: url("../images/mobile/image-header.jpg") no-repeat center;
+    background-size: cover;
+    height: 70vh;
+  }
+
+  .menu-btn {
+    display: block;
+    border: none;
+    background: none;
+    padding: 15px 0;
+    cursor: pointer;
+    position: relative;
+  }
+
+  .menu-btn::before {
+    content: '';
+    display: block;
+    background: var(--white);
+    height: 2px;
+    width: 30px;
+    box-shadow: 0px 10px 0 var(--white), 0px -10px 0 var(--white);
+  }
+
+  .header-menu {
+    display: none;
+    margin: 0 auto;
+    position: relative;
+  }
+
+  .header-menu.ativo::before {
+    content: '';
+    display: block;
+    top: -19px;
+    width: 0;
+    height: 0;
+    right: 0;
+    border-left: 10px solid transparent;
+    border-top: 10px solid transparent;
+    border-right: 10px solid var(--white);
+    border-bottom: 10px solid var(--white);
+    position: absolute;
+  }
+
+  .header-menu a {
+    color: var(--grayish-blue);
+    transition: .2s;
+  }
+
+  .header-menu li:nth-child(-n + 3) a:hover {
+    color: hsl(210, 4%, 67%, .6);
+  }
+
+  .header-menu li:last-child a {
+    background: var(--yellow);
+    font-size: .875rem;
+  }
+
+  .header-menu li:last-child a:hover {
+    color: var(--very-des-blue);
+    background: hsl(51, 100%, 49%, .2);
+    transition: 0.2s;
+  }
+
+  .header-menu.ativo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: var(--white);
+    top: 100px;
+    padding: 40px 50px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 2rem;
+    right: 2rem;
+    position: absolute;
+    gap: 40px;
+  }
+
+  .header-intro {
+    margin-top: 60px;
+  }
+
+  .header-intro h1 {
+    font-size: 2.5rem;
+    letter-spacing: 5px;
+    line-height: 1.2;
+    margin-bottom: 10px;
+  }
+  .header-intro img{
+    width: 30px;
+  }
 }
