--- a/css/header.css
+++ b/css/header.css
@@ -147,6 +147,18 @@
     right: 2rem;
     position: absolute;
     gap: 40px;
+    animation: show-down .4s forwards;
+  }
+
+  @keyframes show-down {
+    from {
+      opacity: 0;
+      transform: translate3d(0, -30px, 0);
+    }
+    to {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
   }
 
   .header-intro {
